# lem_in

./: CMakeLists.txt  Makefile  add_room.c  bfs.c  compile.txt  get_ways.c  input  leaks  lem-in  lem_in.h  main.c  move_ants.c  read_links.c  read_rooms.c  show.c  test  test.uu  test111  test999  test_lem.uu  ways_init.c
libft/: Makefile  author
libft/inc/: ft_printf.h  get_next_line.h  libft.h
libft/src/: ft_atoi_fdf.c  ft_double_malloc.c  ft_error.c  ft_memalloc.c  ft_strdoublefree.c  get_next_line.c  pf_c_s_p_end.c  pf_digit.c  pf_float.c  pf_floatnum.c  pf_iputs.c  pf_ox.c  pf_printf.c  pf_spec_work.c  pf_unsigned.c
